--- a/themes/san-diego/source/styles/_layout-system.scss
+++ b/themes/san-diego/source/styles/_layout-system.scss
@@ -254,7 +254,7 @@ $layout-levels: (
   }
   
   @media (max-width: variables.$mobile-breakpoint) {
-    position: fixed;
+    position: absolute;
     top: 16px;
     left: 16px;
     z-index: 1001;
